--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy",
+    "prisma:seed": "node --loader ts-node/esm prisma/seed.ts",
     "lint": "eslint",
     "test": "node --test --experimental-strip-types --experimental-specifier-resolution=node"
   },
@@ -14,10 +17,13 @@
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "pg": "^8.16.3",
+    "@prisma/client": "^6.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
+    "prisma": "^6.0.0",
+    "ts-node": "^10.9.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
