--- a/package.json
+++ b/package.json
@@ -10,27 +10,29 @@
     "prisma:migrate": "prisma migrate deploy",
     "prisma:seed": "node --loader ts-node/esm prisma/seed.ts",
     "lint": "eslint",
-    "test": "node --test --experimental-strip-types --experimental-specifier-resolution=node"
+    "test": "node --test --experimental-strip-types --experimental-specifier-resolution=node",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^6.0.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "pg": "^8.16.3",
-    "@prisma/client": "^6.0.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
-    "prisma": "^6.0.0",
-    "ts-node": "^10.9.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
+    "prisma": "^6.0.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
